--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                         <div class="social-share-inner-left">
                                             <span class="title">find with me</span>
                                             <ul class="social-share d-flex liststyle">
-                                                <li class="https://www.facebook.com/profile.php?id=100092119996766"><a href="#"><i data-feather="facebook"></i></a>
+                                                <li class="facebook"><a href="https://www.facebook.com/profile.php?id=100092119996766"><i data-feather="facebook"></i></a>
                                                 </li>
                                                 <li class="instagram"><a href="https://instagram.com/dre_graphics_studio"><i data-feather="instagram"></i></a>
                                                 </li>
